# DbMessaging

./: .travis.yml  CMakeLists.txt  DbMessaging.pro  README.md
messagingclient/: CMakeLists.txt  main.cpp  messagingclient.pro
messaginglib/: CMakeLists.txt  dbmsgbase.h  dbmsgfield.h  dbmsgfieldbase.h  messaginglib.pro  messaginglib_global.h  tst_messagingtest.cpp
messaginglib/messages/: mymessage.h
messagingserver/: CMakeLists.txt  client.cpp  client.h  main.cpp  messagingserver.pro  server.cpp  server.h
messagingtest/: CMakeLists.txt  messagingtest.pro
